adding final project gallery

--- a/index.html
+++ b/index.html
@@ -3,14 +3,110 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Recipe Book</title>
+	<title>CP2 Final Project Gallery</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
-<body>
-	<h1>Ms. Ifft's Recipes</h1>
-	<ul>
-		<li><a href="recipes/eggdropsoup.html">Egg Drop Soup</a></li>
-		<li><a href="recipes/mapotofu.html">Mapo Tofu</a></li>
-		<li><a href="recipes/scallionpancake.html">Scallion Pancakes</a></li>
-	</ul>
+<body style="background-color: black;">
+	<div id="container">
+		<div class="row">
+			<p id="title">CP2: Web Dev Final Projects</p>
+		</div>
+		<div class="row">
+			<div class="card" style="width: 18rem;">
+				<img src="images/rb.jpeg" class="card-img-top" style="margin-top: 10px;">
+			  	<div class="card-body">
+				    <h5 class="card-title">Ryan Bottjer</h5>
+				    <h6 class="card-subtitle mb-2 text-body-secondary">Client: Deborah Bottjer</h6>
+				    <p class="website-title"><b>Kitten Smitten</b></p>
+				    <p class="card-text">As a kitten fosterer, Deborah would like to share updates on the fostering process and specific resources so that the public can access everything they need surrounding “Kitten Smitten” in one place.</p>
+				    <a href="https://ryanbottjer.github.io/" class="card-link" target="_blank">Visit Website</a>
+			  	</div>
+			</div>
+			<div class="card" style="width: 18rem;">
+				<img src="images/oc.jpeg" class="card-img-top" style="margin-top: 10px;">
+			  	<div class="card-body">
+				    <h5 class="card-title">Oliver Cahnman</h5>
+				    <h6 class="card-subtitle mb-2 text-body-secondary">Client: Josh Gross</h6>
+				    <p class="website-title"><b>NBA Player Statistics</b></p>
+				    <p class="card-text">As a sports Fan, Josh would like to learn more about his favorite teams and players so he can use this knowledge to understand and make better predictions about events in sports.</p>
+				    <a href="https://ocahnman.github.io/nba_player.html" class="card-link" target="_blank">Visit Website</a>
+			  	</div>
+			</div>
+			<div class="card" style="width: 18rem;">
+				<img src="images/pc.jpeg" class="card-img-top" style="margin-top: 10px;">
+			  	<div class="card-body">
+				    <h5 class="card-title">Paul Callahan</h5>
+				    <h6 class="card-subtitle mb-2 text-body-secondary">Clients: Andy Bigelow & Ryan Zaremba</h6>
+				    <p class="website-title"><b>Call To Action!</b></p>
+				    <p class="card-text">As citizens/teachers who want to combat climate change, Mr. Zaremba and Mr. Bigelow would like to create a website not only educating  individuals, but give people opportunities to get involved.
+</p>
+				    <a href="https://pac2024.github.io/header.html" class="card-link" target="_blank">Visit Website</a>
+			  	</div>
+			</div>
+			<div class="card" style="width: 18rem;">
+				<img src="images/ed.jpeg" class="card-img-top" style="margin-top: 10px;">
+			  	<div class="card-body">
+				    <h5 class="card-title">Ethan Dennis</h5>
+				    <h6 class="card-subtitle mb-2 text-body-secondary">Client: Jeanne Barr</h6>
+				    <p class="website-title"><b>FWP SSDP</b></p>
+				    <p class="card-text">As an advocacy group, SSDP would like to share their progress and initiatives with the greater community so they can spread awareness and ultimately save lives.</p>
+				    <a href="https://ssdp.fwparker.org/" class="card-link" target="_blank">Visit Website</a>
+			  	</div>
+			</div>
+			<div class="card" style="width: 18rem;">
+				<img src="images/dg.jpeg" class="card-img-top" style="margin-top: 10px;">
+			  	<div class="card-body">
+				    <h5 class="card-title">Deven Gupta</h5>
+				    <h6 class="card-subtitle mb-2 text-body-secondary">Client: Cassie Slater</h6>
+				    <p class="website-title"><b>FWP Mean Girls</b></p>
+				    <p class="card-text">As a play director, our user, Cassie Slater,  would like to share information about her plays through a website to broadcast her work to the public and announce upcoming events.</p>
+				    <a href="https://meangirls.fwparker.org/" class="card-link" target="_blank">Visit Website</a>
+			  	</div>
+			</div>
+			<div class="card" style="width: 18rem;">
+				<img src="images/ji.jpeg" class="card-img-top" style="margin-top: 10px;">
+			  	<div class="card-body">
+				    <h5 class="card-title">Josh Ijiwola</h5>
+				    <h6 class="card-subtitle mb-2 text-body-secondary">Client: Connor Elligan</h6>
+				    <p class="website-title"><b>Connor Elligan</b></p>
+				    <p class="card-text">As a model, Connor Elligan would like to share his photos, with the goal of gaining widespread recognition across the media sectors.</p>
+				    <a href="https://joshijiwola.github.io/" class="card-link" target="_blank">Visit Website</a>
+			  	</div>
+			</div>
+			<div class="card" style="width: 18rem;">
+				<img src="images/gk.jpeg" class="card-img-top" style="margin-top: 10px;">
+			  	<div class="card-body">
+				    <h5 class="card-title">Grant Koh</h5>
+				    <h6 class="card-subtitle mb-2 text-body-secondary">Client: Ethan Levine</h6>
+				    <p class="website-title"><b>Mr. Levine's Assortment of Games</b></p>
+				    <p class="card-text">As a statistics teacher, Mr. Levine would like to have a website that he can use to show casino games to his students so they can gain experience applying probability concepts without having to unblock an actual gambling website on the Parker WiFi.</p>
+				    <a href="https://gkoh1.github.io/" class="card-link" target="_blank">Visit Website</a>
+			  	</div>
+			</div>
+			<div class="card" style="width: 18rem;">
+				<img src="images/km.jpeg" class="card-img-top" style="margin-top: 10px;">
+			  	<div class="card-body">
+				    <h5 class="card-title">Krish Malhotra</h5>
+				    <h6 class="card-subtitle mb-2 text-body-secondary">Client: Kanika Malhotra</h6>
+				    <p class="website-title"><b>Kanika Malhotra's Virtual Art Gallery</b></p>
+				    <p class="card-text">As an at home artist, Kanika Malhotra would like to have a platform to share her artistic talents in a way that she doesn’t have right now.</p>
+				    <a href="https://gxm355.github.io/" class="card-link" target="_blank">Visit Website</a>
+			  	</div>
+			</div>
+			<div class="card" style="width: 18rem;">
+				<img src="images/np.jpeg" class="card-img-top" style="margin-top: 10px;">
+			  	<div class="card-body">
+				    <h5 class="card-title">Noah Pendo</h5>
+				    <h6 class="card-subtitle mb-2 text-body-secondary">Client: Ari Braun</h6>
+				    <p class="website-title"><b>Ari Braun.</b></p>
+				    <p class="card-text">As a filmmaker, Ari would like to share his recent projects with the public so that more people can see his work before hiring him.</p>
+				    <a href="http://www.noahpendo.com/" class="card-link" target="_blank">Visit Website</a>
+			  	</div>
+			</div>
+
+		</div>
+	</div>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
