--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				    <h5 class="card-title">Grant Koh</h5>
 				    <h6 class="card-subtitle mb-2 text-body-secondary">Client: Ethan Levine</h6>
 				    <p class="website-title"><b>Mr. Levine's Assortment of Games</b></p>
-				    <p class="card-text">As a statistics teacher, Mr. Levine would like to have a website that he can use to show casino games to his students so they can gain experience applying probability concepts without having to unblock an actual gambling website on the Parker WiFi.</p>
+				    <p class="card-text">As a statistics teacher, Mr. Levine would like to have a website that provides a safe environment to show games to his students so they can gain experience applying probability concepts.</p>
 				    <a href="https://gkoh1.github.io/" class="card-link" target="_blank">Visit Website</a>
 			  	</div>
 			</div>
