--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				    <h5 class="card-title">Ethan Dennis</h5>
 				    <h6 class="card-subtitle mb-2 text-body-secondary">Client: Jeanne Barr</h6>
 				    <p class="website-title"><b>FWP SSDP</b></p>
-				    <p class="card-text">As an advocacy group, SSDP would like to share their progress and initiatives with the greater community so they can spread awareness and ultimately save lives.</p>
+				    <p class="card-text">As an advocacy group, SSDP would like to share their progress and initiatives around sensible drug policy with the greater community so they can spread awareness and ultimately save lives.</p>
 				    <a href="https://ssdp.fwparker.org/" class="card-link" target="_blank">Visit Website</a>
 			  	</div>
 			</div>
