--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body style="background-color: black;">
 	<div id="container">
 		<div class="row">
-			<p id="title">CP2: Web Dev Final Projects</p>
+			<p id="title">CP2: Web Dev Final Projects!</p>
 		</div>
 		<div class="row">
 			<div class="card" style="width: 18rem;">
