updating final project website

--- a/index.html
+++ b/index.html
@@ -14,96 +14,76 @@
 		</div>
 		<div class="row">
 			<div class="card" style="width: 18rem;">
-				<img src="images/rb.jpeg" class="card-img-top" style="margin-top: 10px;">
+				<img src="images/HA.jpg" class="card-img-top" style="margin-top: 10px;">
 			  	<div class="card-body">
-				    <h5 class="card-title">Ryan Bottjer</h5>
-				    <h6 class="card-subtitle mb-2 text-body-secondary">Client: Deborah Bottjer</h6>
-				    <p class="website-title"><b>Kitten Smitten</b></p>
-				    <p class="card-text">As a kitten fosterer, Deborah would like to share updates on the fostering process and specific resources so that the public can access everything they need surrounding “Kitten Smitten” in one place.</p>
-				    <a href="https://ryanbottjer.github.io/" class="card-link" target="_blank">Visit Website</a>
+				    <h5 class="card-title">Helen Aklilu</h5>
+				    <h6 class="card-subtitle mb-2 text-body-secondary">Client: Jojo Husbeck</h6>
+				    <p class="website-title"><b>FWP Varsity Girls Basketball Team</b></p>
+				    <p class="card-text">As a basketball captain, Jojo would like to share news about the girl’s basketball team so the broader Parker community can be more aware of the team’s games and successes to hopefully increase attendance.</p>
+				    <a href="http://helen-akl.github.io/home" class="card-link" target="_blank">Visit Website</a>
 			  	</div>
 			</div>
 			<div class="card" style="width: 18rem;">
-				<img src="images/oc.jpeg" class="card-img-top" style="margin-top: 10px;">
+				<img src="images/LG.jpg" class="card-img-top" style="margin-top: 10px;">
 			  	<div class="card-body">
-				    <h5 class="card-title">Oliver Cahnman</h5>
-				    <h6 class="card-subtitle mb-2 text-body-secondary">Client: Josh Gross</h6>
-				    <p class="website-title"><b>NBA Player Statistics</b></p>
-				    <p class="card-text">As a sports Fan, Josh would like to learn more about his favorite teams and players so he can use this knowledge to understand and make better predictions about events in sports.</p>
-				    <a href="https://ocahnman.github.io/nba_player.html" class="card-link" target="_blank">Visit Website</a>
+				    <h5 class="card-title">Logan Gupta</h5>
+				    <h6 class="card-subtitle mb-2 text-body-secondary">Client: Max Satterfield</h6>
+				    <p class="website-title"><b>FWP Boys Golf Team</b></p>
+				    <p class="card-text">As a golf captain Max Satterfield would like to have a website so he can show what the team accomplished this year.</p>
+				    <a href="http://lgupta1016.github.io" class="card-link" target="_blank">Visit Website</a>
 			  	</div>
 			</div>
 			<div class="card" style="width: 18rem;">
-				<img src="images/pc.jpeg" class="card-img-top" style="margin-top: 10px;">
+				<img src="images/SK.jpg" class="card-img-top" style="margin-top: 10px;">
 			  	<div class="card-body">
-				    <h5 class="card-title">Paul Callahan</h5>
-				    <h6 class="card-subtitle mb-2 text-body-secondary">Clients: Andy Bigelow & Ryan Zaremba</h6>
-				    <p class="website-title"><b>Call To Action!</b></p>
-				    <p class="card-text">As citizens/teachers who want to combat climate change, Mr. Zaremba and Mr. Bigelow would like to create a website not only educating  individuals, but give people opportunities to get involved.
+				    <h5 class="card-title">Samantha Kovler</h5>
+				    <h6 class="card-subtitle mb-2 text-body-secondary">Client: Gail Kovler</h6>
+				    <p class="website-title"><b>Mac Help by Gail</b></p>
+				    <p class="card-text">As a Mac (apple) helper,  Gail would like to make her business more accessible so the public can receive help if they need it regarding their apple devices. 
 </p>
-				    <a href="https://pac2024.github.io/header.html" class="card-link" target="_blank">Visit Website</a>
+				    <a href="http://samanthakovler.github.io" class="card-link" target="_blank">Visit Website</a>
 			  	</div>
 			</div>
 			<div class="card" style="width: 18rem;">
-				<img src="images/ed.jpeg" class="card-img-top" style="margin-top: 10px;">
+				<img src="images/JL.jpg" class="card-img-top" style="margin-top: 10px;">
 			  	<div class="card-body">
-				    <h5 class="card-title">Ethan Dennis</h5>
-				    <h6 class="card-subtitle mb-2 text-body-secondary">Client: Jeanne Barr</h6>
-				    <p class="website-title"><b>FWP SSDP</b></p>
-				    <p class="card-text">As an advocacy group, SSDP would like to share their progress and initiatives around sensible drug policy with the greater community so they can spread awareness and ultimately save lives.</p>
-				    <a href="https://ssdp.fwparker.org/" class="card-link" target="_blank">Visit Website</a>
+				    <h5 class="card-title">Josie Laufer</h5>
+				    <h6 class="card-subtitle mb-2 text-body-secondary">Client: Mia Scala</h6>
+				    <p class="website-title"><b>Cradles 2 Crayons Club At Parker</b></p>
+				    <p class="card-text">As a leader of the Cradles to Crayons Club at Parker, Mia would like to showcase their accomplishments in the club so that the Parker community can become more aware of the club and can join if they are interested.</p>
+				    <a href="https://josielaufer.github.io/" class="card-link" target="_blank">Visit Website</a>
 			  	</div>
 			</div>
 			<div class="card" style="width: 18rem;">
-				<img src="images/dg.jpeg" class="card-img-top" style="margin-top: 10px;">
+				<img src="images/LS.jpg" class="card-img-top" style="margin-top: 10px;">
 			  	<div class="card-body">
-				    <h5 class="card-title">Deven Gupta</h5>
-				    <h6 class="card-subtitle mb-2 text-body-secondary">Client: Cassie Slater</h6>
-				    <p class="website-title"><b>FWP Mean Girls</b></p>
-				    <p class="card-text">As a play director, our user, Cassie Slater,  would like to share information about her plays through a website to broadcast her work to the public and announce upcoming events.</p>
-				    <a href="https://meangirls.fwparker.org/" class="card-link" target="_blank">Visit Website</a>
+				    <h5 class="card-title">Lionel Schulman</h5>
+				    <h6 class="card-subtitle mb-2 text-body-secondary">Client: Paul Schulman</h6>
+				    <p class="website-title"><b>Coming Soon</b></p>
+				    <p class="card-text">As a designer, paul would like to share his design expertise so that people may hire him to design things within their home </p>
+				    <a href="" class="card-link" target="_blank">Coming Soon</a>
 			  	</div>
 			</div>
 			<div class="card" style="width: 18rem;">
-				<img src="images/ji.jpeg" class="card-img-top" style="margin-top: 10px;">
+				<img src="images/JS.jpg" class="card-img-top" style="margin-top: 10px;">
 			  	<div class="card-body">
-				    <h5 class="card-title">Josh Ijiwola</h5>
-				    <h6 class="card-subtitle mb-2 text-body-secondary">Client: Connor Elligan</h6>
-				    <p class="website-title"><b>Connor Elligan</b></p>
-				    <p class="card-text">As a model, Connor Elligan would like to share his photos, with the goal of gaining widespread recognition across the media sectors.</p>
-				    <a href="https://joshijiwola.github.io/" class="card-link" target="_blank">Visit Website</a>
+				    <h5 class="card-title">John Sinchi</h5>
+				    <h6 class="card-subtitle mb-2 text-body-secondary">Client: David Mendoza</h6>
+				    <p class="website-title"><b>DM Law</b></p>
+				    <p class="card-text">Wanting to be a future immigration lawyer, David would like to have a mock/model website so he can envision what being a lawyer would be like. </p>
+				    <a href="https://johns-coder-5.github.io/" class="card-link" target="_blank">Visit Website</a>
 			  	</div>
 			</div>
 			<div class="card" style="width: 18rem;">
-				<img src="images/gk.jpeg" class="card-img-top" style="margin-top: 10px;">
+				<img src="images/MV.jpg" class="card-img-top" style="margin-top: 10px;">
 			  	<div class="card-body">
-				    <h5 class="card-title">Grant Koh</h5>
-				    <h6 class="card-subtitle mb-2 text-body-secondary">Client: Ethan Levine</h6>
-				    <p class="website-title"><b>Mr. Levine's Assortment of Games</b></p>
-				    <p class="card-text">As a statistics teacher, Mr. Levine would like to have a website that provides a safe environment to show games to his students so they can gain experience applying probability concepts.</p>
-				    <a href="https://gkoh1.github.io/" class="card-link" target="_blank">Visit Website</a>
+				    <h5 class="card-title">Mia Vitacek</h5>
+				    <h6 class="card-subtitle mb-2 text-body-secondary">Client: Delilah Davis</h6>
+				    <p class="website-title"><b>Phaedrus</b></p>
+				    <p class="card-text">As an artist, our user would like to create a website where Phaedrus (the art magazine) is accessible for everyone so people feel comfortable sharing their own art.</p>
+				    <a href="http://mvitacek.github.io" class="card-link" target="_blank">Visit Website</a>
 			  	</div>
-			</div>
-			<div class="card" style="width: 18rem;">
-				<img src="images/km.jpeg" class="card-img-top" style="margin-top: 10px;">
-			  	<div class="card-body">
-				    <h5 class="card-title">Krish Malhotra</h5>
-				    <h6 class="card-subtitle mb-2 text-body-secondary">Client: Kanika Malhotra</h6>
-				    <p class="website-title"><b>Kanika Malhotra's Virtual Art Gallery</b></p>
-				    <p class="card-text">As an at home artist, Kanika Malhotra would like to have a platform to share her artistic talents in a way that she doesn’t have right now.</p>
-				    <a href="https://gxm355.github.io/" class="card-link" target="_blank">Visit Website</a>
-			  	</div>
-			</div>
-			<div class="card" style="width: 18rem;">
-				<img src="images/np.jpeg" class="card-img-top" style="margin-top: 10px;">
-			  	<div class="card-body">
-				    <h5 class="card-title">Noah Pendo</h5>
-				    <h6 class="card-subtitle mb-2 text-body-secondary">Client: Ari Braun</h6>
-				    <p class="website-title"><b>Ari Braun.</b></p>
-				    <p class="card-text">As a filmmaker, Ari would like to share his recent projects with the public so that more people can see his work before hiring him.</p>
-				    <a href="http://www.noahpendo.com/" class="card-link" target="_blank">Visit Website</a>
-			  	</div>
-			</div>
+			</div>		
 
 		</div>
 	</div>
