--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body style="background-color: black;">
 	<div id="container">
 		<div class="row">
-			<p id="title">CP2: Web Dev Final Projects!</p>
+			<p id="title">CP2: Web Dev Final Projects</p>
 		</div>
 		<div class="row">
 			<div class="card" style="width: 18rem;">
@@ -59,9 +59,9 @@
 			  	<div class="card-body">
 				    <h5 class="card-title">Lionel Schulman</h5>
 				    <h6 class="card-subtitle mb-2 text-body-secondary">Client: Paul Schulman</h6>
-				    <p class="website-title"><b>Coming Soon</b></p>
+				    <p class="website-title"><b>Threshold Design Lab</b></p>
 				    <p class="card-text">As a designer, paul would like to share his design expertise so that people may hire him to design things within their home </p>
-				    <a href="" class="card-link" target="_blank">Coming Soon</a>
+				    <a href="https://colonelpotato037.github.io/main/index.html" class="card-link" target="_blank">Coming Soon</a>
 			  	</div>
 			</div>
 			<div class="card" style="width: 18rem;">
