--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				    <h6 class="card-subtitle mb-2 text-body-secondary">Client: Paul Schulman</h6>
 				    <p class="website-title"><b>Threshold Design Lab</b></p>
 				    <p class="card-text">As a designer, paul would like to share his design expertise so that people may hire him to design things within their home </p>
-				    <a href="https://colonelpotato037.github.io/main/index.html" class="card-link" target="_blank">Coming Soon</a>
+				    <a href="https://colonelpotato037.github.io/main/index.html" class="card-link" target="_blank">Visit Website</a>
 			  	</div>
 			</div>
 			<div class="card" style="width: 18rem;">
